show place names in search results

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,3 +37,9 @@ en:
           attributes:
             name:
               invalid: 'must be your full (first and last) name'
+  i18n:
+    plural:
+      keys:
+        - :zero
+        - :one
+        - :other
